# data-structures-c

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: hash.h  hash_table.h  person.h  priority_queue.h  queue.h  stack.h  string_extra.h
include/algorithms/: sliding_window.h
include/algorithms/search/: binary_search.h
include/algorithms/sort/: bubble_sort.h
include/data-structures/: hash_table.h  linked_list.h  priority_queue.h  two_pointers.h
include/data-structures/linear-ds/: hash_table.h  stack.h  two_pointers.h
include/data-structures/non-linear-ds/: binary_search_tree.h  binary_tree.h  priority_queue.h  trie.h
include/data-structures/non-linear-ds/trees/: tree.h
scripts.backup/: build.ps1  build.sh  build_win.ps1  debug.sh  run.ps1  run.sh
src/: hash.c  hash_table.c  linked_list.c  person.c  priority_queue.c  queue.c  stack.c  string_extra.c
src/algorithms/: sliding_window.c
src/algorithms/search/: binary_search.c
src/algorithms/sort/: bubble_sort.c
src/data-structures/: hash_table.c  linked_list.c  priority_queue.c  queue.c  stack.c  two_pointers.c
src/data-structures/linear-ds/: hash_table.c  linked_list.c  priority_queue.c  queue.c  stack.c  two_pointers.c
src/data-structures/non-linear-ds/: binary_tree.c  trie.c
src/data-structures/non-linear-ds/trees/: tree.c
tests/: priority_queue.test.c  queue.test.c  stack.test.c
tests/algorithms/: sliding_window.test.c
tests/algorithms/search/: binary_search.test.c
tests/algorithms/sort/: bubble_sort.test.c
tests/data-structures/: hash_table.test.c  linked_list.test.c  priority_queue.test.c  queue.test.c  stack.test.c  two_pointers_test.c
tests/data-structures/linear-ds/: stack.test.c
tests/data-structures/non-linear-ds/: binary_tree.test.c  trie.test.c
tests/data-structures/non-linear-ds/trees/: binary_tree.test.c
